--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -351,6 +351,7 @@ main .new-users .user-list .user img{
 
 main .recent-orders{
     margin-top: 1.3rem;
+    overflow-y: scroll;
 }
 
 main .recent-orders h2{
@@ -369,6 +370,10 @@ main .recent-orders table{
 
 main .recent-orders table:hover{
     box-shadow: none;
+}
+
+main .client_div,.resto,.livreur_div {
+   height: 40vh;
 }
 
 main table tbody td{
