--- a/application/views/index.html
+++ b/application/views/index.html
@@ -40,6 +40,12 @@
                     </span>
                     <h3>Restaurant & Livreur</h3>
                 </a>
+                <a href="Revenu.html">
+                    <span class="material-icons-sharp">
+                        <!-- charts -->
+                    </span>
+                    <h3>Revenue Mensuel</h3>
+                </a>
                 <a href="#">
                     <span class="material-icons-sharp">
                         settings
