--- a/application/views/ModifAdmin.html
+++ b/application/views/ModifAdmin.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link href="./assets/font/font.css" rel="stylesheet">
+
     <link rel="stylesheet" href="./assets/css/index.css">
-    <link rel="stylesheet" href="./assets/css/modif.css">
     <link rel="icon" href="./assets/images/Logo.png">
     <title>E-Kaly | Admin</title>
 </head>
@@ -41,9 +41,15 @@
                     </span>
                     <h3>Restaurant & Livreur</h3>
                 </a>
+                <a href="LivreurPaye.html">
+                    <span class="material-icons-sharp">
+                        delivery_dining
+                    </span>
+                    <h3>Livreurs Payés</h3>
+                </a>
                 <a href="Revenu.html">
                     <span class="material-icons-sharp">
-                        <!-- charts -->
+                        assessment
                     </span>
                     <h3>Revenue Mensuel</h3>
                 </a>
