--- a/application/views/Revenu.html
+++ b/application/views/Revenu.html
@@ -111,6 +111,7 @@
 
     <script src="./assets/js/orders.js"></script>
     <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/Chart.min.js"></script>
     <script src="./assets/js/chart.js"></script>
 </body>
 
