--- a/assets/css/panier.css
+++ b/assets/css/panier.css
@@ -135,14 +135,13 @@ main {
     width: 38vw;
     height: 38vh;
 }
-
+/*
 #map, #repere {
-display: none; /* Masquer par défaut */
-opacity: 0; /* Initialiser l'opacité à 0 */
-transition: opacity 1s ease-in-out; /* Transition pour l'opacité */
+display: none; 
+opacity: 0;
  }
 
  #map.show, #repere.show {
  display: block;
- opacity: 1; /* Opacité à 1 lors de l'affichage */
-}
+ opacity: 1; 
+}*/
