--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -107,7 +107,7 @@ body{
     left: 15px;
     color: var(--black-clr);
     pointer-events: none;
-    /* transform: translateY(15px); */
+    transform: translateY(15px);
     font-size: 18px;
     transition: 150ms cubic-bezier(0.4,0,0.2,1);
 }
